# hermes-presence

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
demos/: demo.py  full_yua_agent_demo.py  yua_agent_demo.py  yua_real_llm_demo.py  yua_repl.py  yua_soul_integration_demo.py
hermes_agent/: README.md  __init__.py  agent.py  llm_providers.py  plugin.py
hermes_agent/tests/: test_adapter.py  test_agent.py  test_plugin.py  test_tools.py
hermes_agent/tools/: __init__.py  validate_soul.py  yua_memory_adapter.py  yua_soul_loader.py
inner_life/: __init__.py  activity.py  body.py  demo.py  generator.py  monologue.py  prompt_blocks.py  storage.py
inner_life/tests/: test_inner_life.py
temporal_awareness/: __init__.py  absence.py  clock.py  history.py  naturalize.py  now.py  prompt_blocks.py  types.py
temporal_awareness/locales/: __init__.py  base.py  en_US.py  ja_JP.py  zh_TW.py
temporal_awareness/tests/: test_absence.py  test_clock.py  test_history.py  test_naturalize.py  test_now.py
