[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-presence"
version = "0.1.0"
description = "讓 agent 獲得真實存在感的時間感知 library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Bryan (Chung Cheng Chen)"},
]
keywords = [
    "hermes-agent",
    "agent",
    "memory",
    "temporal-awareness",
    "presence",
    "time",
    "i18n",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    # 純 stdlib，無外部依賴
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/bryanchen3777/hermes-presence"

[tool.setuptools.packages.find]
include = ["temporal_awareness*"]
exclude = ["tests*", "demos*"]
